--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QX Consulting | ...</title>
+    <title>QX Consulting</title>
     <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,28 +19,36 @@
             <strong>QX Consulting</strong>
         </div>
         <nav>
-            <a href="TBD1.html" class="header-button">TBD1</a>
-            <a href="TBD2.html" class="header-button">TBD2</a>
-            <a href="assets/one-pager.pdf" target="_blank" class="download-cv-button">Download Onepager</a>
+            <!-- <a href="TBD1.html" class="header-button">TBD1</a>
+            <a href="TBD2.html" class="header-button">TBD2</a> -->
+            <a href="assets/one-pager.pdf" target="_blank" class="download-cv-button">Download One-Pager</a>
         </nav>
     </header>
 
     <section class="main">
         <div class="intro">
-            <h1>HEADER</h1>
-            <p>Pitch.</p>
+            <h1 class="diagonal-text">
+                <span class="top-left">Cutting through complexity</span>
+                <span class="slash">/</span>
+                <span class="bottom-right">to deliver financial insights</span>
+            </h1>
+            <!-- <h1>Cutting through complexity to deliver financial insights</h1> -->
+            <p>We combine academic rigor with industry expertise to provide advanced financial research, predictive modeling, and data-driven decision-making support</p>
             <img src="/assets/images/US.png" alt="Profile Picture" class="profile-pic">
-            <div class="devices">
-                <img src="assets/images/devices.png" alt="Devices illustration">
-            </div>
         </div>
     </section>
     <section class="about">
-        <h2>Header.</h2>
-        <p>p1.</p>
-        <p>p2.</p>
-        <p>p3.</p>
-        </p>
+        <h2>Who we are</h2>
+        <p>QX Consulting is a finance research firm with over 20 years of combined experience in financial modeling, machine learning, 
+            and market analytics. We bring a deep understanding of data and finance to solve complex challenges.</p>
+        <h2>How we work</h2>
+        <p>Our approach is built on academic rigor, real-world application, and a commitment to clear, actionable insights.</p>
+        <ul>
+            <li>We analyze financial markets to identify inefficiencies, optimize trading strategies, and assess liquidity risks.</li>
+            <li>We apply cutting-edge machine learning and statistical methods to develop robust financial models.</li>
+            <li>We evaluate financial innovations such as decentralized finance, blockchain, and alternative datasets.</li>
+            <li>We provide research-backed insights to help firms navigate regulation, risk, and policy shifts.</li>
+        </ul>
     </section>
 
     <section class="cards">
@@ -48,77 +56,47 @@
             <div class="icon">
                 <img src="assets/icons/icon3.png" alt="Computational Thinker Icon">
             </div>
-            <h3>Area 1</h3>
-            <p>Summary. </p>
-            <ul>
-                <li><span>LIST 1:</span> 
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
-                <li><span>LIST 2:</span>
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
+            <h3>Financial Market Dynamics</h3>
+            <p>We help clients understand financial markets by analyzing their structure, behavior, and risks. Our expertise includes</p>
+            <ul class="card-list">
+                <li>Market microstructure,</li>
+                <li>Trading costs,</li>
+                <li>Liquidity analysis,</li>
             </ul>
+            <p>enabling firms to identify inefficiencies and optimize investment and trading strategies.</p>
         </div>
 
         <div class="card">
             <div class="icon">
                 <img src="assets/icons/icon2.png" alt="Computational Thinker Icon">
             </div>
-            <h3>Area 2</h3>
-            <p>Summary. </p>
-            <ul>
-                <li><span>LIST 1:</span> 
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
-                <li><span>LIST 2:</span> 
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
+            <h3>Innovations in Financial Technology</h3>
+            <p>We analyze and provide clarity on the evolving financial technology landscape, focusing on key innovations like</p>
+            <ul class="card-list">
+                <li>DeFi,</li>
+                <li>Blockchain,</li>
+                <li>FinTech.</li>
             </ul>
+            <p>Our work evaluates the impact of fintech innovations on markets, from payment systems to crypto assets.</p>
         </div>
 
         <div class="card">
             <div class="icon">
                 <img src="assets/icons/icon1.png" alt="Computational Thinker Icon">
             </div>
-            <h3>Area 3</h3>
-            <p>Summary. </p>
-            <ul>
-                <li><span>LIST 1:</span> 
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
-                <li><span>LIST 2:</span> 
-                    <ul class="second-list">
-                        <li>l1</li>
-                        <li>l2</li>
-                        <li>l3</li>
-                    </ul>
-                </li>
+            <h3>Navigating Risk & Regulation</h3>
+            <p>We tackle risk management and regulatory challenges with research-backed strategies. Our work includes </p>
+            <ul class="card-list">
+                <li>Assessing the impact of regulatory changes,</li>
+                <li>Analyzing macroeconomic trends,</li>
+                <li>Developing risk mitigation frameworks,</li>
             </ul>
+            <p>helping clients adapt to an evolving financial and regulatory environment with confidence.</p>
         </div>
     </section>
     <section class="get-in-touch">
-        <h2>GET IN TOUCH?</h2>
-        <p>GETINTOUCH.</p>
+        <h2>Let's find research-driven solutions for modern finance</h2>
+        <p>Reach out to discuss how we can support your research, strategy, and financial decision-making.</p>
         <a href="mailto:XXXXX@gmail.com" class="button">Get in touch</a>
     </section>
 
@@ -133,11 +111,10 @@
             <a href="https://papers.ssrn.com/"><i class="fas fa-book"></i></a>
             <a href="mailto:XXXXXXX@gmail.com"><i class="far fa-envelope"></i></a>
         </div>
-        <p class="footer-text">Handcrafted with help from ChatGPT
-            <span class="tooltip">Layout inspired by https://mattfarley.ca/ </span>
-        </p>
-        <!-- <p class="footer-made-with">Made with ❤️ </p> -->
         <p class="all-rights-reserved">© 2025 QX Consulting. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
+
+
